support media recording

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ava Bot</title>
-    <link rel="stylesheet" href="/public/css/main.css" />
-    <script src="https://unpkg.com/htmx.org@1.9.8" defer></script>
-    <script src="https://unpkg.com/htmx.org/dist/ext/sse.js" defer></script>
-    <script src="//unpkg.com/alpinejs" defer></script>
-  </head>
-  <body>
-    {% block content %}{% endblock %} {% block script %}{% endblock %}
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ava Bot</title>
+  <link rel="stylesheet" href="/public/css/main.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://unpkg.com/htmx.org@1.9.8" defer></script>
+  <script src="https://unpkg.com/htmx.org/dist/ext/sse.js" defer></script>
+  <script src="//unpkg.com/alpinejs" defer></script>
+</head>
+
+<body>
+  {% block content %}{% endblock %} {% block script %}{% endblock %}
+</body>
+
 </html>
