setup /chats and /signals for state update

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -1,9 +1,8 @@
 {% extends "base.html.j2" %} {% block content %}
 <div class="w-2/3 mx-auto items-center justify-center p-2 mt-2">
-  <h1 class="text-center text-2xl">Hello world</h1>
-  <ul hx-ext="sse" sse-connect="/chats" sse-swap="message" hx-swap="afterend">
-    Contents of this box will be updated in real time with every SSE message
-    received from the chatroom.
+  <h1 class="text-center text-2xl">Ava Bot</h1>
+  <ul hx-ext="sse" sse-connect="/chats" sse-swap="message" hx-swap="beforeend"
+    class="mt-4 p-2 rounded border flex items-center justify-center">
   </ul>
 
   <div class="px-2 mt-4 flex items-center justify-center" x-data="recordingState()">
@@ -11,6 +10,8 @@
       :class="{'bg-red-800 animate-pulse': isRecording, 'bg-red-500': !isRecording}">
       <i class="fa-solid fa-microphone fa-xl"></i>
     </button>
+  </div>
+  <div hx-ext="sse" sse-connect="/signals" sse-swap="message" class="p-2 flex items-center justify-center text-center">
   </div>
 </div>
 
