--- a/templates/blocks/image.html.j2
+++ b/templates/blocks/image.html.j2
@@ -1,8 +1,8 @@
-<div class="flex items-center justify-center p-2 space-x-2">
-  <div class="w-3/5 p-2">
+<div class="flex items-center justify-center space-x-2">
+  <div class="w-3/5">
     <img src='{{ url }}' class="rounded-lg" />
   </div>
-  <div class="w-2/5 p-2">
+  <div class="w-2/5 p-2 prose-lg">
     <p class="text-2xl">{{ prompt }}</p>
   </div>
 </div>
