--- a/templates/blocks/speech.html.j2
+++ b/templates/blocks/speech.html.j2
@@ -1,10 +1,10 @@
-<div class="p-2 flex justify-center items-center space-x-0.5">
-  <div class="w-2/5">
+<div class="flex items-center justify-center p-2 space-x-2">
+  <div class="w-1/3">
     <audio controls autoplay>
       <source src='{{ url }}' type='audio/mp3'>
     </audio>
   </div>
-  <div class="w-3/5">
+  <div class="w-2/3 prose-lg">
     <p>{{ text }}</p>
   </div>
 </div>
