--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -1,5 +1,5 @@
 {% extends "base.html.j2" %} {% block content %}
-<div class="items-center justify-center w-2/3 p-2 mx-auto mt-2">
+<div class="items-center justify-center p-2 mx-auto mt-2 max-w-7xl">
   <h1 class="text-2xl text-center">Ava Bot</h1>
   <ol hx-ext="sse" sse-connect="/chats" sse-swap="message" hx-swap="beforeend"
     class="relative p-2 mt-4 border-gray-200 border-s dark:border-gray-700">
