--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -1,8 +1,7 @@
 {% extends "base.html.j2" %} {% block content %}
 <div class="items-center justify-center p-2 mx-auto mt-2 max-w-7xl">
   <h1 class="text-2xl text-center">Ava Bot</h1>
-  <ol hx-ext="sse" sse-connect="/chats" sse-swap="message" hx-swap="beforeend"
-    class="relative p-2 mt-4 border-gray-200 border-s dark:border-gray-700">
+  <ol id="chats" class="relative p-2 mt-4 border-gray-200 border-s dark:border-gray-700">
   </ol>
 
   <div class="flex items-center justify-center px-2 mt-4" x-data="recordingState()">
@@ -11,7 +10,7 @@
       <i class="fa-solid fa-microphone fa-xl"></i>
     </button>
   </div>
-  <div hx-ext="sse" sse-connect="/signals" sse-swap="message" class="flex items-center justify-center p-2 text-center">
+  <div id="signals" class="flex items-center justify-center p-2 text-center">
   </div>
 </div>
 
@@ -88,6 +87,40 @@
 
   document.addEventListener("DOMContentLoaded", function () {
     recorder.init();
+
+    let sse = new EventSource("/events");
+    let chats = document.getElementById("chats");
+    let signals = document.getElementById("signals");
+
+    sse.addEventListener("signal", (event) => {
+      signals.innerHTML = event.data;
+    });
+
+    sse.addEventListener("input_skeleton", (event) => {
+      chats.insertAdjacentHTML("beforeend", event.data);
+    });
+
+    sse.addEventListener("input", (event) => {
+      let node = document.getElementById(`input-${event.lastEventId}`);
+      if (node) {
+        node.innerHTML = event.data;
+      }
+    });
+
+    sse.addEventListener("reply_skeleton", (event) => {
+      chats.insertAdjacentHTML("beforeend", event.data);
+    });
+
+    sse.addEventListener("reply", (event) => {
+      let node = document.getElementById(`reply-${event.lastEventId}`);
+      if (node) {
+        node.innerHTML = event.data;
+      }
+    });
+
+    sse.addEventListener("error", (event) => {
+      console.log(event);
+    });
   });
 </script>
 {% endblock %}
