--- a/templates/events/chat_reply_skeleton.html.j2
+++ b/templates/events/chat_reply_skeleton.html.j2
@@ -4,7 +4,7 @@
     <img class="rounded-full shadow-lg" src="{{ avatar }}" alt="{{ name }}" />
   </span>
   <div
-    class="items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:flex dark:bg-gray-700 dark:border-gray-600">
+    class="items-center justify-between p-4 border border-gray-200 rounded-lg shadow-sm bg-gray-50 sm:flex dark:bg-gray-700 dark:border-gray-600">
     <div id="reply-{{ id }}" class="w-full text-sm font-normal text-gray-500 dark:text-gray-300">
       <div role="status" class="w-3/4 animate-pulse">
         <div class="h-2.5 bg-gray-200 rounded-full dark:bg-gray-700 w-64 mb-4"></div>
