--- a/templates/events/signal.html.j2
+++ b/templates/events/signal.html.j2
@@ -1,12 +1,10 @@
 {% match self %}
 {% when SignalEvent::Processing with (v) %}
-<p class="text-gray-800"><i class="fa-solid fa-spinner animate-spin"></i> Processing {{ v }}</p>
-{% when SignalEvent::Finish with (v) %}
-<p class="text-green-800">Finished {{ v }}</p>
+<p class="text-gray-800"><i class="fa-solid fa-spinner animate-spin"></i> {{ v }}...</p>
 {% when SignalEvent::Error with (v) %}
-<p class="text-red-500"><i class="fa-solid fa-circle-exclamation"></i>Error: {{ v }}</p>
+<p class="text-red-500"><i class="fa-solid fa-circle-exclamation"></i> Error: {{ v }}</p>
 {% when SignalEvent::Complete %}
-<p class="text-green-800"><i class="fa-solid fa-check"></i>Complete</p>
+<p class="text-green-800"><i class="fa-solid fa-check"></i> Completed!</p>
 {% else %}
 <p class="text-yellow-700">Unknown event</p>
 {% endmatch %}
